# pkan_config

./: README.rst  pyproject.toml
paths/: paths.yaml.sample
pkan_config/: config.py  copy_configs.py  exceptions.py  interfaces.py  namespaces.py
templates/: .secrets.yaml  flask.yaml  iso2dcat.yaml  nuxt_config.js  plone.yaml  rdf4j.conf  rdfstore.yaml  settings.yaml  shacl.yaml  solr.conf  solr.yaml
templates/plone_harvester/: lgb.yaml
tests/: test_pkan_config.py
