[tool.poetry]
name = "pkan_config"
version = "0.1.0"
description = ""
authors = ["sandra <sandra.rum@inqbus.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
"zope.interface" = "^5.4.0"
"zope.component" = "^5.0.1"
colorlog = "^6.6.0"
dynaconf = "^3.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
